# tokopaedi-async

./: README.md  example.py  pyproject.toml
src/tokopaedi/: get_product.py  get_reviews.py  search.py
src/tokopaedi_async/: __init__.py  custom_logging.py  get_fingerprint.py  get_product.py  search.py  tokopaedi_types.py
tests/: test_tokopaedi.py
