[tool.poetry]
name = "tokopaedi-async"
version = "0.1.2"
description = "High-performance Async Python scraper for Tokopedia (Fork of tokopaedi)"
authors = ["pandamoon21 <pandamoon21@waifu.club>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "tokopaedi_async", from = "src" }]
include = ["LICENSE"]

homepage = "https://github.com/pandamoon21/tokopaedi-async"
repository = "https://github.com/pandamoon21/tokopaedi-async"
documentation = "https://github.com/pandamoon21/tokopaedi-async"
keywords = ["tokopedia", "scraper", "ecommerce", "product", "data", "web-scraping", "python", "data-analysis", "tokopedia-reviews", "async", "asyncio"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
curl-cffi = "^0.11.4"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"